[tool.poetry]
name = "cbtree"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
spacy = "^3.5.2"
ipython = "^8.12.0"
ipykernel = "^6.22.0"
textacy = "^0.13.0"
benepar = "^0.2.0"
nltk = "^3.8.1"
svgling = "^0.3.1"


[tool.poetry.group.dev.dependencies]
rich = "^13.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
