[tool.poetry]
name = "cbtree"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.12.0"
ipykernel = "^6.22.0"
nltk = "^3.8.1"
svgling = "^0.3.1"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
pytest = "^7.3.1"
httpx = "^0.24.0"


[tool.poetry.group.dev.dependencies]
rich = "^13.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
